# 2d-rrt-python

./: README.md  pyproject.toml  setup.py
examples/01_point_robot/: generate_dataset.py  process_data.py
examples/01_point_robot/trajectories/: rrt_star_random_start_random_goal_2_samples.json
src/rrt_planner_python/: datasets.py  rrt_star.py  traj_visualizer.py
tests/: test_datasets_interpolation.py  test_rrt_star.py  test_trajectory_visualizer.py
